<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/black"
   />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:gravity="center"
      android:layout_above="@id/card_view"
      android:padding="28dp">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp" />

  </LinearLayout>

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      app:cardCornerRadius="28dp"
      android:layout_marginBottom="-20dp"
      android:id="@+id/card_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="585dp"
        android:orientation="vertical"
        android:padding="58dp">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Đăng Kí"
          android:textColor="@color/text_color"
          android:textSize="32sp"
          android:textStyle="bold" />

      <View
          android:layout_width="wrap_content"
          android:layout_height="30dp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:alpha="0.7"
          android:text="@string/email"
          android:textStyle="bold" />

      <EditText
          android:id="@+id/edtEmail"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawablePadding="10dp"
          android:imeOptions="actionDone"
          android:inputType="textEmailAddress"
          android:padding="12dp" />

      <View
          android:layout_width="wrap_content"
          android:layout_height="20dp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:alpha="0.7"
          android:text="@string/password"
          android:textStyle="bold" />

      <EditText
          android:id="@+id/edtPassWord"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawablePadding="10dp"
          android:imeOptions="actionDone"
          android:inputType="textPassword"
          android:padding="12dp"
          android:singleLine="true" />

      <View
          android:layout_width="wrap_content"
          android:layout_height="20dp" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:alpha="0.7"
          android:text="@string/confirm_password"
          android:textStyle="bold" />

      <EditText
          android:id="@+id/edtRePassWord"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:drawablePadding="10dp"
          android:imeOptions="actionDone"
          android:inputType="textPassword"
          android:padding="12dp"
          android:singleLine="true" />

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnBackLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/main"
            android:backgroundTint="@color/white"/>

      </RelativeLayout>

      <View
          android:layout_width="wrap_content"
          android:layout_height="10dp" />

      <Button
          android:id="@+id/btnRegister"
          android:layout_width="match_parent"
          android:layout_height="60dp"
          android:text="@string/register"
          android:backgroundTint="@color/black"
          app:cornerRadius="32dp" />

      <View
          android:layout_width="wrap_content"
          android:layout_height="10dp" />

    </LinearLayout>

  </androidx.cardview.widget.CardView>
</RelativeLayout>
